--- a/EMS/EmployeemanagementSystem/package.json
+++ b/EMS/EmployeemanagementSystem/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.0.0",
-  "description": "NO404 administration panel",
+  "description": "Crud Operation Demo",
   "license": "MIT",
   "dependencies": {
     "@angular/common": "~2.2.0",
@@ -13,18 +13,22 @@
     "@angular/router": "~3.2.0",
     "@angular/upgrade": "~2.2.0",
     "angular-in-memory-web-api": "~0.1.15",
+    "bower": "1.7.9",
     "core-js": "^2.4.1",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
-    "zone.js": "^0.6.25",
-    "bower": "1.7.9",
-    "jquery": "^3.1.0"
+    "tslint": "^5.5.0",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^2.2.0",
+    "gulp-scss-lint": "^0.4.0",
+    "gulp-tslint": "^8.1.1",
     "typescript": "^2.0.0",
     "typings": "^1.3.2"
   },
