--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,3 +3,16 @@ before_build:
   - cmd: dotnet restore
 build:
   verbosity: minimal
+  
+  
+version: 1.0.{build}
+image: Visual Studio 2017
+platform: Any CPU
+pull_requests:
+  do_not_increment_build_number: true
+install:
+  - dotnet --info
+build:
+  project: EmployeemanagementSystem.sln
+  verbosity: minimal
+test: off 
