--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-time-machine
 
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
 name: Sample Jekyll Blog
